@@ -35,10 +35,11 @@ import org.apache.lucene.document.FieldSelectorResult;
 import org.w3c.dom.Node;
 import org.xml.sax.SAXException;
 
+import com.jaeksoft.searchlib.spellcheck.SpellCheckField;
 import com.jaeksoft.searchlib.util.DomUtils;
 import com.jaeksoft.searchlib.util.XmlWriter;
 
-public class Field implements FieldSelector, Externalizable {
+public class Field implements FieldSelector, Externalizable, Comparable<Field> {
 
 	private static final long serialVersionUID = -7666123998960959190L;
 
@@ -123,6 +124,16 @@ public class Field implements FieldSelector, Externalizable {
 	public void writeXmlConfig(XmlWriter xmlWriter) throws SAXException {
 		xmlWriter.startElement("field", "name", name);
 		xmlWriter.endElement();
+	}
+
+	@Override
+	public int compareTo(Field o) {
+		return name.compareTo(o.name);
+	}
+
+	public int compareTo(SpellCheckField o) {
+		// TODO Auto-generated method stub
+		return 0;
 	}
 
 }
